# 0patch-lsa-sentinel

./: .editorconfig  .gitattributes  .gitignore  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  AUDIT.adoc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  GOVERNANCE.adoc  Justfile  MAINTAINERS.adoc  README.md  SECURITY.md
.github/workflows/: estate-rules.yml  release.yml
.machine_readable/: root-allow.txt
.machine_readable/bot_directives/: methodology.a2ml
.machine_readable/contractiles/: Dustfile.a2ml  Mustfile.a2ml  Trustfile.a2ml
.machine_readable/descriptiles/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
abi-idris2/: sentinel-abi.ipkg
abi-idris2/src/Sentinel/: ABI.idr
audits/: assail-classifications.a2ml  audit-residuals.adoc
core-spark/: sentinel_core.gpr
core-spark/src/: sentinel-abi.adb  sentinel-abi.ads  sentinel-classifier.adb  sentinel-classifier.ads  sentinel.ads
docs/: FIELD-VALIDATION.md
ffi-zig/: build.zig
ffi-zig/include/: sentinel.h
ffi-zig/src/: sentinel_ffi.zig
host-rust/: Cargo.toml  build.rs
host-rust/benches/: classify_bench.rs
host-rust/src/: classify.rs  ffi.rs  lib.rs  main.rs  model.rs  report.rs
host-rust/src/collectors/: eventlog.rs  mod.rs  opatch.rs  parse.rs  registry.rs  snapshot.rs
host-rust/tests/: classify_tests.rs
installer/: Install-LsaSentinel.ps1  README.md  Uninstall-LsaSentinel.ps1
outreach/: 0patch-followup.md  STATUS.md
